src/objects/AccountTankaM__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>取引先</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>AccountTankaM_Account</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AiteShohinShizaiCode__c</fullName>
        <description>相手の商品資材コード</description>
        <inlineHelpText>相手の商品資材コード</inlineHelpText>
        <label>相手商品資材コード</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AiteShohinShizaimei__c</fullName>
        <description>相手の商品資材名</description>
        <inlineHelpText>相手の商品資材名</inlineHelpText>
        <label>相手商品資材名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Biko__c</fullName>
        <label>備考</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChoseiShohiKigen__c</fullName>
        <formula>IF (ShomiKigenKakuhoNissu__c  -  ShohinShizaiM__r.ShomiKigenNissu__c &gt; 0, 
&quot;延長&quot;, 
&quot;短縮&quot;
) 
+

 TEXT(  ABS(ShomiKigenKakuhoNissu__c  -  ShohinShizaiM__r.ShomiKigenNissu__c)  ) 

+&quot;日間&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>商品資材マスタの値から調整した日数。</inlineHelpText>
        <label>調整消費期限</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GenzaiYukoFlgNamachi__c</fullName>
        <defaultValue>false</defaultValue>
        <label>￥￥_現在有効フラグ生値</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GenzaiYukoFlg__c</fullName>
        <formula>AND(TekiyoKikanKara__c  &lt;=  TODAY(), TODAY()  &lt;=  TekiyoKikanMade__c )</formula>
        <label>現在有効フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HambaiArariGaku__c</fullName>
        <formula>NohinKakaku__c  -  HyojunGenka__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>販売価格　－　標準原価</inlineHelpText>
        <label>販売粗利額</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HambaiArariRitsu__c</fullName>
        <formula>HambaiArariGaku__c  /  NohinKakaku__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>販売粗利額　÷　販売価格</inlineHelpText>
        <label>販売粗利率</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HambaiNebikiMasi__c</fullName>
        <formula>ShohinShizaiM__r.HyojunArariRitsu__c  -  HambaiArariRitsu__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>割増値引率</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HyojunBaika__c</fullName>
        <formula>ShohinShizaiM__r.HyojunBaika__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>標準売価</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HyojunGenka__c</fullName>
        <formula>ShohinShizaiM__r.HyojunGenka__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>標準原価</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NarabiJun__c</fullName>
        <label>並び順</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NohinKakaku__c</fullName>
        <label>販売価格</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ShohinShizaiCode__c</fullName>
        <externalId>true</externalId>
        <label>￥￥_インポート商品資材コード</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShohinShizaiKubun__c</fullName>
        <formula>TEXT( ShohinShizaiM__r.ShohinShizaiKubun__c )</formula>
        <label>商品資材区分</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShohinShizaiM__c</fullName>
        <label>商品資材</label>
        <referenceTo>ShohinShizaiM__c</referenceTo>
        <relationshipName>AccountTankaM_ShohinShizaiM</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ShohinShizaiMmei__c</fullName>
        <formula>ShohinShizaiM__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>商品資材マスタ名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShomiKigenKakuhoNissu__c</fullName>
        <description>商品資材マスタ　の　販売管理期限日数　が　標準値</description>
        <inlineHelpText>出荷時に担保する必要のある消費期限の期間。
例：販売管理期限など。
例：納品管理期限など。</inlineHelpText>
        <label>消費期限確保日数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TekiyoKikanKara__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>適用期間から</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TekiyoKikanMade__c</fullName>
        <defaultValue>TODAY()  + 36500</defaultValue>
        <label>適用期間まで</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TorihikisakiCode__c</fullName>
        <externalId>true</externalId>
        <label>￥￥_インポート取引先コード</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Torihikisakimei__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>取引先名</label>
        <type>Text</type>
    </fields>
    <label>取引条件マスタ</label>
    <listViews>
        <fullName>ALL</fullName>
        <columns>NAME</columns>
        <columns>ShohinShizaiMmei__c</columns>
        <columns>Account__c</columns>
        <columns>HyojunGenka__c</columns>
        <columns>HyojunBaika__c</columns>
        <columns>NohinKakaku__c</columns>
        <columns>ShomiKigenKakuhoNissu__c</columns>
        <columns>TekiyoKikanKara__c</columns>
        <columns>TekiyoKikanMade__c</columns>
        <columns>ShohinShizaiKubun__c</columns>
        <columns>NarabiJun__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <listViews>
        <fullName>View20151024c</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>ShohinShizaiMmei__c</columns>
        <columns>ShohinShizaiKubun__c</columns>
        <columns>NohinKakaku__c</columns>
        <columns>ShomiKigenKakuhoNissu__c</columns>
        <columns>TekiyoKikanKara__c</columns>
        <columns>TekiyoKikanMade__c</columns>
        <columns>NarabiJun__c</columns>
        <filterScope>Everything</filterScope>
        <label>．自動化フラグ設定</label>
    </listViews>
    <nameField>
        <displayFormat>取引条件-{0000000000}</displayFormat>
        <label>取引条件番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>